Agregando varias cosas al UML